src/snapshots/venial__tests__parse_generic_args_turbofish.snap
---
source: src/tests.rs
expression: generic_args
---
GenericArgList {
    tk_turbofish_colons: "::",
    args: [],
}
