src/snapshots/venial__tests__parse_generic_fn.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        qualifiers: FnQualifiers {
            tk_default: None,
            tk_const: None,
            tk_async: None,
            tk_unsafe: None,
            tk_extern: None,
            extern_abi: None,
        },
        tk_fn_keyword: Ident(
            fn,
        ),
        name: Ident(
            generic,
        ),
        generic_params: Some(
            [
                GenericParam {
                    name: "T",
                    bound: None,
                },
                GenericParam {
                    name: "B",
                    bound: None,
                },
            ],
        ),
        tk_params_parens: (),
        params: [
            Typed(
                FnTypedParam {
                    attributes: [],
                    tk_mut: None,
                    name: Ident(
                        a,
                    ),
                    tk_colon: Punct {
                        char: ':',
                        spacing: Alone,
                    },
                    ty: [
                        T,
                    ],
                },
            ),
        ],
        where_clause: None,
        tk_return_arrow: Some(
            [
                Punct {
                    char: '-',
                    spacing: Joint,
                },
                Punct {
                    char: '>',
                    spacing: Alone,
                },
            ],
        ),
        return_ty: Some(
            [
                B,
            ],
        ),
        tk_semicolon: None,
        body: Some(
            Group {
                delimiter: Brace,
                stream: TokenStream [],
            },
        ),
    },
)
