src/snapshots/venial__tests__parse_generic_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        name: Ident(
            generic,
        ),
        generic_params: Some(
            [
                "<",
                "T",
                ",",
                "B",
                ">",
            ],
        ),
        where_clauses: None,
        params: [
            FunctionParameter {
                attributes: [],
                name: Ident(
                    a,
                ),
                ty: [
                    "T",
                ],
            },
        ],
        returns: Some(
            [
                "B",
            ],
        ),
        abi: "Rust",
        is_unsafe: false,
        is_async: false,
        is_const: false,
    },
)
