src/snapshots/venial__tests__parse_impl_inherent_generic.snap
---
source: src/tests.rs
expression: impl_decl
---
Impl(
    Impl {
        attributes: [],
        tk_unsafe: None,
        tk_impl: Ident(
            impl,
        ),
        impl_generic_params: Some(
            [
                GenericParam {
                    tk_prefix: "'",
                    name: "a",
                    bound: None,
                },
                GenericParam {
                    name: "T",
                    bound: Some(
                        [
                            Clone,
                        ],
                    ),
                },
                GenericParam {
                    tk_prefix: "const",
                    name: "N",
                    bound: Some(
                        [
                            i8,
                        ],
                    ),
                },
            ],
        ),
        trait_ty: None,
        tk_for: None,
        self_ty: [
            structs,
            ":",
            ":",
            MyStruct,
            "<",
            "'",
            a,
            ",",
            T,
            ",",
            N,
            ">",
        ],
        where_clause: None,
        tk_braces: {},
        inner_attributes: [],
        body_items: [],
    },
)
