src/snapshots/venial__tests__parse_inline_generic_args-2.snap
---
source: src/tests.rs
expression: owned_args
---
GenericArgList {
    args: [
        Lifetime {
            tk_lifetime: Punct {
                char: '\'',
                spacing: Joint,
            },
            ident: Ident(
                a,
            ),
        },
        TyOrConst {
            expr: [
                T,
            ],
        },
        TyOrConst {
            expr: [
                U,
            ],
        },
        TyOrConst {
            expr: [
                N,
            ],
        },
    ],
}
