src/snapshots/venial__tests__parse_inline_generic_args.snap
---
source: src/tests.rs
expression: params
---
[
    GenericParam {
        tk_prefix: "'",
        name: "a",
        bound: Some(
            [
                "'",
                static,
            ],
        ),
    },
    GenericParam {
        name: "T",
        bound: None,
    },
    GenericParam {
        name: "U",
        bound: Some(
            [
                Clone,
            ],
        ),
    },
    GenericParam {
        tk_prefix: "const",
        name: "N",
        bound: Some(
            [
                usize,
            ],
        ),
    },
]
