src/snapshots/venial__tests__parse_multiple_brackets.snap
---
source: src/tests.rs
assertion_line: 539
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        _struct: Ident(
            struct,
        ),
        name: Ident(
            Hello,
        ),
        generic_params: None,
        where_clause: None,
        fields: Tuple(
            [
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        A,
                        "<",
                        B,
                        "<",
                        C,
                        ">",
                        ">",
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        A,
                        "<",
                        B,
                        "<",
                        C,
                        ",",
                        D,
                        ">",
                        ">",
                    ],
                },
                TupleField {
                    attributes: [],
                    vis_marker: None,
                    ty: [
                        "<",
                        "<",
                        D,
                        as,
                        Trait,
                        ">",
                        ":",
                        ":",
                        X,
                        as,
                        Trait,
                        ">",
                        ":",
                        ":",
                        Y,
                    ],
                },
            ],
        ),
        _semicolon: Some(
            Punct {
                char: ';',
                spacing: Alone,
            },
        ),
    },
)
