src/snapshots/venial__tests__parse_normal_struct.snap
---
source: src/tests.rs
assertion_line: 37
expression: struct_type
---
Struct(
    Struct {
        attributes: [],
        vis_marker: None,
        name: "Hello",
        fields: Named(
            [
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: "a",
                    ty: [
                        "A",
                    ],
                },
                NamedField {
                    attributes: [],
                    vis_marker: None,
                    name: "b",
                    ty: [
                        "B",
                    ],
                },
            ],
        ),
    },
)
