src/snapshots/venial__tests__parse_normal_struct_attributes.snap
---
source: src/tests.rs
assertion_line: 215
expression: struct_type
---
Struct(
    Struct {
        name: "Hello",
        fields: Named(
            [
                NamedField {
                    name: "a",
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: A,
                            },
                        ],
                    },
                },
                NamedField {
                    name: "b",
                    ty: TyExpr {
                        tokens: [
                            Ident {
                                sym: B,
                            },
                        ],
                    },
                },
            ],
        ),
    },
)
